--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,12 @@ Flask-Login==0.2.11
 Flask-SQLAlchemy==2.0
 Flask-WTF==0.11
 itsdangerous==0.24
-Jinja2==2.7.3
+Jinja2==2.10.1
 ldap3==0.9.8.2
 MarkupSafe==0.23
-numpy==1.9.2
 pyasn1==0.1.7
-SQLAlchemy==1.0.3
+SQLAlchemy>=1.3.0
 Werkzeug==0.15.3
 WTForms==2.0.2
 requests
+Slacker
